5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1807_2568.log
== SUBMITION (2019-06-13 08:37:29) 
-- CODE:
metade = int(input("metade dos asteriscos na primeira linha")) * 2

ast = "*"
linha_1 = ast * metade_ast

QA2 = (len(linha_1)- 2)//2


oo = "oo"
mult = 1
print(linha_1)
ll = (ast * QA2 ) + (oo * mult ) + (ast * QA2 )
for ch in range(0,len(linha_1)):
	if (QA2 <= len(ll)-1 and (mult <= (len(linha_1) - 2)/2)):
		ll = (ast * QA2 ) + (oo * mult ) + (ast * QA2 ) 
		print(ll)
		QA2 = QA2 - 1
		mult = mult + 1
-- EXECUTION TIME:
0.700172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2568/main.py", line 4, in <module>
    linha_1 = ast * metade_ast
NameError: name 'metade_ast' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:07) 
-- CODE:
metade = int(input("metade dos asteriscos na primeira linha")) * 2

ast = "*"
linha_1 = ast * metade_ast

QA2 = (len(linha_1)- 2)//2

oo = "oo"
mult = 1
print(linha_1)

ll = (ast * QA2 ) + (oo * mult ) + (ast * QA2 )

for ch in range(0,len(linha_1)):
	if (QA2 <= len(ll)-1 and (mult <= (len(linha_1) - 2)/2)):
		ll = (ast * QA2 ) + (oo * mult ) + (ast * QA2 ) 
		print(ll)
		QA2 = QA2 - 1
		mult = mult + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    linha_1 = ast * metade_ast
NameError: name 'metade_ast' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:38:26) 
-- CODE:
metade = int(input("metade dos asteriscos na primeira linha")) * 2

ast = "*"
linha_1 = ast * metade

QA2 = (len(linha_1)- 2)//2

oo = "oo"
mult = 1
print(linha_1)

ll = (ast * QA2 ) + (oo * mult ) + (ast * QA2 )

for ch in range(0,len(linha_1)):
	if (QA2 <= len(ll)-1 and (mult <= (len(linha_1) - 2)/2)):
		ll = (ast * QA2 ) + (oo * mult ) + (ast * QA2 ) 
		print(ll)
		QA2 = QA2 - 1
		mult = mult + 1
-- EXECUTION TIME:
0.618396
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
